# locus

./: .coverage  .gitignore  GO_REWRITE_PROGRESS.md  GRID_LAUNCHER_IMPLEMENTATION.md  LOCKSCREEN.md  LOCKSCREEN_IMPLEMENTATION.md  NOTIFICATION_DAEMON_IMPLEMENTATION.md  README.md  SOLUTION_SUMMARY.md  THEME.md  WM_LAUNCHER_SUMMARY.md  __init__.py  bluetooth_launcher.py  bookmark_launcher.py  bookmarks.py  calc_launcher.py  calculator.py  config-validator  config.py  config.toml  config.toml.example  file_openers.toml.example  go.mod  go.sum  hooks.py  kill_launcher.py  launcher.py  locus-client  locus_client.py  locus_commands.sh  main.py  monitor_launcher.py  pyproject.toml  pytest.ini  run.sh  run_status_bar.py  status_bar.py  test-lockscreen.sh  timer_launcher.py  utils.py  (+3 more)
.org/: orgi.org
.orgi/: orgi.org
core/: __init__.py  config.py  exceptions.py  hooks.py  launcher.py  launcher_navigation.py  launcher_registry.py  launcher_search.py  launcher_ui.py  launcher_window.py  notification_banner.py  notification_queue.py  notification_store.py  popup.py  process_launcher.py  search_models.py  status_bar.py  statusbar_interface.py  statusbar_manager.py  statusbar_registry.py  style.py  wrapped_result.py
docs/: ARCHITECTURE_IMPROVEMENTS.md  CONFIG_VALIDATOR.md  FILE_OPENERS.md  LAUNCHER_DATA_FLOW.md  STATUSBAR_ARCHITECTURE.md  adding_new_launcher.md  features_to_implement.md  grid_view_api.md  llm_setup.md
launchers/: README.md  __init__.py  bluetooth_launcher.py  bookmark_launcher.py  brightness_launcher.py  calc_launcher.py  clipboard_launcher.py  color_launcher.py  (+21 more)
(+203 files in other folders)
