[project]
name = "locus"
version = "0.1.0"
description = "A GTK4-based application launcher with status bar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pgi>=0.0.11.2",
    "pycairo>=1.28.0",
    "pygobject>=3.52.3",
    "requests>=2.32.5",
    "setproctitle>=1.3.7",
    "typing-extensions>=4.14.1",
    "i3ipc>=2.2.1",
    "watchdog>=6.0.0",
    "python-levenshtein>=0.27.3",
]

[project.scripts]
locus = "main:main"

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
]
